--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <div class="footer-logo">
             <img src="./images/logo.png" alt="Agilus Lab Logo">
           </div>
-          <p>Your trusted partner in diagnostic healthcare, providing accurate and reliable testing services since 2010.</p>
+          <p>Your trusted partner in diagnostic healthcare since 2000.</p>
         </div>
         
         <div class="footer-section">
@@ -134,7 +134,7 @@
           </ul>
         </div>
         
-        <div class="footer-section">
+        <div class="footer-section contactfooter">
           <h3>Contact Us</h3>
           <p><i class="fas fa-map-marker-alt"></i> Booth No 29, Phase 3B2, Sector 59, Mohali</p>
           <p><i class="fas fa-phone"></i> +91 9115459115</p>
