other client requiremets

--- a/index.html
+++ b/index.html
@@ -66,6 +66,33 @@
           </p>
         </div>
         <div class="cards">
+          <i class="fas fa-flask"></i>
+          <h3>Complete Blood Count (CBC)</h3>
+          <p>
+            A fundamental test to evaluate overall health and detect disorders
+            like anemia or infections. It measures components such as red blood
+            cells, white blood cells, and platelets.
+          </p>
+        </div>
+        <div class="cards">
+          <i class="fas fa-flask"></i>
+          <h3>Complete Blood Count (CBC)</h3>
+          <p>
+            A fundamental test to evaluate overall health and detect disorders
+            like anemia or infections. It measures components such as red blood
+            cells, white blood cells, and platelets.
+          </p>
+        </div>
+        <div class="cards">
+          <i class="fas fa-flask"></i>
+          <h3>Complete Blood Count (CBC)</h3>
+          <p>
+            A fundamental test to evaluate overall health and detect disorders
+            like anemia or infections. It measures components such as red blood
+            cells, white blood cells, and platelets.
+          </p>
+        </div>
+        <div class="cards">
           <i class="fas fa-heartbeat"></i>
           <h3>Lipid Profile</h3>
           <p>
