Number and address updated.

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         <p id="boldpara">Connect with us, we would love to hear from you!</p>
         <p>At SRL Lab Mohali, we understand the importance of convenience and reliability when it comes to healthcare. That’s why we offer home collection services across the Tricity area (Chandigarh, Mohali, and Panchkula), bringing high-quality diagnostic tests right to your doorstep. Whether you need routine blood tests, specialized screenings, or urgent lab work, our team of professional phlebotomists ensures a hassle-free and accurate service in the comfort of your home</p>
         <div class="email"><i class="ri-mail-check-fill"></i><h3>contact@agiluslab.com</h3></div>
-        <div class="phone"><i class="ri-phone-fill"></i><h3>9115459115</h3></div>
+        <div class="phone"><i class="ri-phone-fill"></i><h3>70077 24535</h3></div>
         <div class="address"><i class="ri-map-pin-2-fill"></i>Booth No 29, Phase 3B2, Phase 3B-2, Sector 59, Sahibzada Ajit Singh Nagar, Punjab 160059</div>
       </div>
       <div class="container2">
@@ -86,8 +86,8 @@
         
         <div class="footer-section contactfooter">
           <h3>Contact Us</h3>
-          <p><i class="fas fa-map-marker-alt"></i> Booth No 29, Phase 3B2, Sector 59, Mohali</p>
-          <p><i class="fas fa-phone"></i> +91 9115459115</p>
+          <p><i class="fas fa-map-marker-alt"></i> SCO 100, Near PGi, Sec 14, Sec 11D, Chandigarh, 160014</p>
+          <p><i class="fas fa-phone"></i> +91 70077 24535</p>
           <p><i class="fas fa-envelope"></i> contact@agiluslab.com</p>
         </div>
         
