--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
         
         <div class="footer-section contactfooter">
           <h3>Contact Us</h3>
-          <p><i class="fas fa-map-marker-alt"></i> Booth No 29, Phase 3B2, Sector 59, Mohali</p>
-          <p><i class="fas fa-phone"></i> +91 9115459115</p>
+          <p><i class="fas fa-map-marker-alt"></i> SCO 100, Near PGi, Sec 14, Sec 11D, Chandigarh, 160014</p>
+          <p><i class="fas fa-phone"></i> +91 70077 24535</p>
           <p><i class="fas fa-envelope"></i> contact@agiluslab.com</p>
         </div>
         
