--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         <p>At SRL Lab Mohali, we understand the importance of convenience and reliability when it comes to healthcare. That’s why we offer home collection services across the Tricity area (Chandigarh, Mohali, and Panchkula), bringing high-quality diagnostic tests right to your doorstep. Whether you need routine blood tests, specialized screenings, or urgent lab work, our team of professional phlebotomists ensures a hassle-free and accurate service in the comfort of your home</p>
         <div class="email"><i class="ri-mail-check-fill"></i><h3>contact@agiluslab.com</h3></div>
         <div class="phone"><i class="ri-phone-fill"></i><h3>70077 24535</h3></div>
-        <div class="address"><i class="ri-map-pin-2-fill"></i>Booth No 29, Phase 3B2, Phase 3B-2, Sector 59, Sahibzada Ajit Singh Nagar, Punjab 160059</div>
+        <div class="address"><i class="ri-map-pin-2-fill"></i>SCO 100, Near PGi, Sec 14, Sec 11D, Chandigarh, 160014</div>
       </div>
       <div class="container2">
         <form>
