Keywords Added In the website

--- a/about.html
+++ b/about.html
@@ -38,14 +38,14 @@
 
     <div class="about-container">
       <div class="about-hero">
-        <h1>Leading Healthcare Diagnostics</h1>
-        <p>Providing accurate and reliable diagnostic services in Chandigarh since 2010</p>
+        <h1>About Agilus Diagnostics Chandigarh</h1>
+        <p>Providing accurate and reliable diagnostic services in Chandigarh since 2010.At Agilus Lab Chandigarh We have 40+ NABL and 2 CAP-accredited labs. At Agilus Diagnostics Chandigarh, we ensure test result accuracy through rigorous quality control and skilled professionals. Our use of advanced technology, proper sample handling, and ongoing staff training further strengthen precision.</p>
       </div>
 
       <div class="about-content">
         <div class="about-section">
           <h2>Who We Are</h2>
-          <p>Agilus Lab is a state-of-the-art diagnostic center equipped with the latest technology and staffed by experienced healthcare professionals. We are committed to providing accurate, timely, and affordable diagnostic services.</p>
+          <p>Agilus Labs chandigarh is a state-of-the-art diagnostic center equipped with the latest technology and staffed by experienced healthcare professionals. We are committed to providing accurate, timely, and affordable diagnostic services.</p>
         </div>
         <div class="about-image">
           <img src="https://images.unsplash.com/photo-1581595220892-b0739db3ba8c" alt="Laboratory Equipment">
