--- a/index.html
+++ b/index.html
@@ -60,36 +60,33 @@
           <i class="fas fa-flask"></i>
           <h3>Complete Blood Count (CBC)</h3>
           <p>
-            A fundamental test to evaluate overall health and detect disorders
-            like anemia or infections. It measures components such as red blood
-            cells, white blood cells, and platelets.
+            Agilus lab chandigarh proves fundamental test to evaluate overall health and detect disorders
+            like anemia or infections. 
           </p>
         </div>
         <div class="cards">
           <i class="fas fa-flask"></i>
-          <h3>Complete Blood Count (CBC)</h3>
+          <h3>Complete Care Vital Pro</h3>
           <p>
-            A fundamental test to evaluate overall health and detect disorders
-            like anemia or infections. It measures components such as red blood
-            cells, white blood cells, and platelets.
+            It combines blood tests, urine tests, and specific vitamin and mineral level assessments to evaluate key areas of health, such as metabolism, organ function, nutrition, and hormonal balance.
           </p>
         </div>
         <div class="cards">
           <i class="fas fa-flask"></i>
-          <h3>Complete Blood Count (CBC)</h3>
+          <h3>Liver Function Profile, Serum</h3>
           <p>
-            A fundamental test to evaluate overall health and detect disorders
-            like anemia or infections. It measures components such as red blood
-            cells, white blood cells, and platelets.
+            At Agilus Chandigarh Liver profile is done to check the overall health of your liver.Your doctor will advise you to do Liver function Panel if he suspects any signs of liver damage.
           </p>
         </div>
         <div class="cards">
           <i class="fas fa-flask"></i>
-          <h3>Complete Blood Count (CBC)</h3>
+          <h3>Culture, Urine With Susceptibility</h3>
           <p>
-            A fundamental test to evaluate overall health and detect disorders
-            like anemia or infections. It measures components such as red blood
-            cells, white blood cells, and platelets.
+            Also known as culture, Urine with susceptibility culture, Urine with susceptibility <br> 
+            Home Collection, Lab Visit
+            
+            Reports within
+            3 Working Days
           </p>
         </div>
         <div class="cards">
