--- a/packages.html
+++ b/packages.html
@@ -32,7 +32,7 @@
   ...
 
     <div class="packages-hero">
-        <h1>Health Packages</h1>
+        <h1>Agilus Lab Chandigarh - Health Packages</h1>
         <p>Comprehensive health screening packages tailored to your needs</p>
     </div>
 
@@ -57,7 +57,7 @@
         <div class="package-card featured">
             <div class="package-header">
                 <span class="featured-tag">Most Popular</span>
-                <h2>Comprehensive Health Check</h2>
+                <h2>Complete Care Vital Pro</h2>
                 <div class="price">₹2499</div>
             </div>
             <div class="package-content">
