--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         <p>Fast and efficient service with timely delivery of test reports.</p>
       </div>
     </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d109716.50270115373!2d76.62260604335935!3d30.7565923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390fed1ceb417d33%3A0xb1e1d499ecf0d202!2sAgilus%20Diagnostics!5e0!3m2!1sen!2sin!4v1744464246661!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <footer class="modern-footer">
       <div class="footer-container">
         <div class="footer-section">
