--- a/packages.html
+++ b/packages.html
@@ -53,6 +53,54 @@
                 <button class="package-btn">Book Now</button>
             </div>
         </div>
+        <div class="package-card">
+            <div class="package-header">
+                <h2>Basic Health Check</h2>
+                <div class="price">₹999</div>
+            </div>
+            <div class="package-content">
+                <ul>
+                    <li><i class="fas fa-check"></i> Complete Blood Count</li>
+                    <li><i class="fas fa-check"></i> Blood Sugar Test</li>
+                    <li><i class="fas fa-check"></i> Lipid Profile</li>
+                    <li><i class="fas fa-check"></i> Liver Function Test</li>
+                    <li><i class="fas fa-check"></i> Kidney Function Test</li>
+                </ul>
+                <button class="package-btn">Book Now</button>
+            </div>
+        </div>
+        <div class="package-card">
+            <div class="package-header">
+                <h2>Basic Health Check</h2>
+                <div class="price">₹999</div>
+            </div>
+            <div class="package-content">
+                <ul>
+                    <li><i class="fas fa-check"></i> Complete Blood Count</li>
+                    <li><i class="fas fa-check"></i> Blood Sugar Test</li>
+                    <li><i class="fas fa-check"></i> Lipid Profile</li>
+                    <li><i class="fas fa-check"></i> Liver Function Test</li>
+                    <li><i class="fas fa-check"></i> Kidney Function Test</li>
+                </ul>
+                <button class="package-btn">Book Now</button>
+            </div>
+        </div>
+        <div class="package-card">
+            <div class="package-header">
+                <h2>Basic Health Check</h2>
+                <div class="price">₹999</div>
+            </div>
+            <div class="package-content">
+                <ul>
+                    <li><i class="fas fa-check"></i> Complete Blood Count</li>
+                    <li><i class="fas fa-check"></i> Blood Sugar Test</li>
+                    <li><i class="fas fa-check"></i> Lipid Profile</li>
+                    <li><i class="fas fa-check"></i> Liver Function Test</li>
+                    <li><i class="fas fa-check"></i> Kidney Function Test</li>
+                </ul>
+                <button class="package-btn">Book Now</button>
+            </div>
+        </div>
 
         <div class="package-card featured">
             <div class="package-header">
@@ -114,19 +162,16 @@
         </div>
         <div class="package-card">
             <div class="package-header">
-                <h2>Executive Health Check</h2>
-                <div class="price">₹4999</div>
+                <h2>Basic Health Check</h2>
+                <div class="price">₹999</div>
             </div>
             <div class="package-content">
                 <ul>
-                    <li><i class="fas fa-check"></i> All Comprehensive Tests</li>
-                    <li><i class="fas fa-check"></i> Cancer Markers</li>
-                    <li><i class="fas fa-check"></i> Hormone Analysis</li>
-                    <li><i class="fas fa-check"></i> Chest X-Ray</li>
-                    <li><i class="fas fa-check"></i> Ultrasound Abdomen</li>
-                    <li><i class="fas fa-check"></i> Bone Density Test</li>
-                    <li><i class="fas fa-check"></i> Detailed Health Report</li>
-                    <li><i class="fas fa-check"></i> Follow-up Consultation</li>
+                    <li><i class="fas fa-check"></i> Complete Blood Count</li>
+                    <li><i class="fas fa-check"></i> Blood Sugar Test</li>
+                    <li><i class="fas fa-check"></i> Lipid Profile</li>
+                    <li><i class="fas fa-check"></i> Liver Function Test</li>
+                    <li><i class="fas fa-check"></i> Kidney Function Test</li>
                 </ul>
                 <button class="package-btn">Book Now</button>
             </div>
