--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <p>
           Your Trusted Partner in Diagnostic Healthcare. We provide accurate, timely, and comprehensive diagnostic services with state-of-the-art technology.
         </p>
-        <button class="btn" onclick="window.location.href='contact.html'">Book An Appointment</button>
+        <a href="https://wa.me/7007724535">
+        <button class="btn" >Book An Appointment</button></a>
       </div>
     </div>
 
@@ -56,6 +57,13 @@
       <h1>Our services</h1>
       <p>Comprehensive Diagnostics services with cutting-edge technology</p>
       <div class="services-cards">
+        <div class="cards">
+          <i class="fas fa-flask"></i>
+          <h3>Complete Care Vital Pro</h3>
+          <p>
+            It combines blood tests, urine tests, and specific vitamin and mineral level assessments to evaluate key areas of health, such as metabolism, organ function, nutrition, and hormonal balance.
+          </p>
+        </div>
         <div class="cards">
           <i class="fas fa-flask"></i>
           <h3>Complete Blood Count (CBC)</h3>
@@ -72,6 +80,12 @@
           </p>
         </div>
         <div class="cards">
+          <i class="fas fa-flask"></i>
+          <h3>Liver Function Profile, Serum</h3>
+          <p>
+            At Agilus Chandigarh Liver profile is done to check the overall health of your liver.Your doctor will advise you to do Liver function Panel if he suspects any signs of liver damage.
+          </p>
+        </div> <div class="cards">
           <i class="fas fa-flask"></i>
           <h3>Liver Function Profile, Serum</h3>
           <p>
@@ -109,7 +123,8 @@
         </div>
       </div>
     </div>
-
+ <!-- Review -->
+ <div class="services">
     <div class="wcus">
       <div class="wcus-left">
         <img
@@ -139,7 +154,6 @@
         <p>Fast and efficient service with timely delivery of test reports.</p>
       </div>
     </div>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d109716.50270115373!2d76.62260604335935!3d30.7565923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390fed1ceb417d33%3A0xb1e1d499ecf0d202!2sAgilus%20Diagnostics!5e0!3m2!1sen!2sin!4v1744464246661!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <footer class="modern-footer">
       <div class="footer-container">
         <div class="footer-section">
